--- a/index.html
+++ b/index.html
@@ -10,61 +10,39 @@
 
   <header>Alicia's Artist Website</header>
 
-  <h1>For More Information</h1>
-
-<center><p><a href="mailto:abreinke@yahoo.com">Email Me</a></p></center>
-
-  <center><a href="https://www.instagram.com/abtheavidartist/">
-    <img class="rounded" src="instagram.jpg" alt="selfie" width="500" height="330">
-    <p>Find Me on Instagram</p>
-  </a></center>
-
-  <center><a href="https://www.linkedin.com/in/alicia-breinke-619b2583/">
-    <img src="logo-li.jpg" alt="LinkedIn Logo" class="150px; 86px">
-    <p>Find Me on LinkedIn</p>
-  </a></center>
-
-<div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <img src="index-photolink.jpg" alt="bridge" style="width:450px;height:450px">
-    </div>
-    <div class="flip-box-back">
-      <p><a href="photo-work.html">Photo Work</a></p>
-    </div>
-  </div>
+<div class="container5">
+  <div class="desc">For More Information</div> 
+<ul>
+  <li><a href="mailto:abreinke@yahoo.com">Email Me</a></li>
+  <li><a href="https://www.instagram.com/abtheavidartist/">Find Me on Instagram</a></li>
+  <li><a href="https://www.linkedin.com/in/alicia-breinke-619b2583/">Find Me on LinkedIn</a></li>
+</ul>
 </div>
 
-<div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <img src="index-digitallink.jpg" alt="cranes" style="width:450px;height:450px">
-    </div>
-    <div class="flip-box-back">
-      <p><a href="design-work.html">Design Work</a></p>
-    </div>
+<div class="row">
+  <div class="column">
+    <a href="photo-work.html">
+    <img src="index-photolink.jpg" alt="bridge" style="width:100%">
+    <p>Photo Work</p>
+  </a>
   </div>
-</div>
-
-<div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <img src="index-codelink.jpg" alt="lightning" style="width:450px;height:450px">
-    </div>
-    <div class="flip-box-back">
-      <p><a href="code-work.html">Code Work</a></p>
-    </div>
+  <div class="column">
+    <a href="design-work.html">
+    <img src="index-digitallink.jpg" alt="paper birds" style="width:100%">
+    <p>Design Work</p>
+  </a>
   </div>
+  <div class="column">
+    <a href="code-work.html">
+    <img src="index-codelink.jpg" alt="lightning" style="width:100%">
+    <p>Code Work</p>
+  </a>
 </div>
-
-<div class="flip-box">
-  <div class="flip-box-inner">
-    <div class="flip-box-front">
-      <img src="index-videolink.jpg" alt="lantern" style="width:450px;height:450px">
-    </div>
-    <div class="flip-box-back">
-      <p><a href="video-work.html">Video Work</a></p>
-    </div>
+<div class="column">
+    <a href="video-work.html">
+    <img src="index-videolink.jpg" alt="lantern" style="width:100%">
+    <p>Video Work</p>
+  </a>
   </div>
 </div>
 
