--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 <div class="row">
   <div class="column">
     <a href="photo-work.html">
-    <img src="index-photolink.jpg" alt="bridge" style="width:25%">
+    <img src="index-photolink.jpg" alt="bridge" style="width:100">
     <p>Photo Work</p>
   </a>
   </div>
   <div class="column">
     <a href="design-work.html">
-    <img src="index-digitallink.jpg" alt="paper birds" style="width:25%">
+    <img src="index-digitallink.jpg" alt="paper birds" style="width:100%">
     <p>Design Work</p>
   </a>
   </div>
   <div class="column">
     <a href="code-work.html">
-    <img src="index-codelink.jpg" alt="lightning" style="width:25%">
+    <img src="index-codelink.jpg" alt="lightning" style="width:100%">
     <p>Code Work</p>
   </a>
 </div>
 <div class="column">
     <a href="video-work.html">
-    <img src="index-videolink.jpg" alt="lantern" style="width:25%">
+    <img src="index-videolink.jpg" alt="lantern" style="width:100%">
     <p>Video Work</p>
   </a>
   </div>
