--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="column">
     <a href="photo-work.html">
-    <img src="index-photolink.jpg" alt="bridge" style="width:100">
+    <img src="index-photolink.jpg" alt="bridge" style="width:100%">
     <p>Photo Work</p>
   </a>
   </div>
