--- a/code-work.html
+++ b/code-work.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 
 </head>
+<title>Code Work</title>
 <body>
 
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
@@ -18,9 +19,9 @@
     <a href="design-work.html">Design Work</a>
     <a href="video-work.html">Video Work</a>
     <h2>For More Information</h2>
-    <a href="mailto:abreinke@yahoo.com">Email Me</a>
-    <a href="https://www.instagram.com/abtheavidartist/">Find me on Instagram.</a>
-    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/">Find me on LinkedIn.</a>
+    <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
     </div>
   </div>
 
@@ -28,8 +29,19 @@
 
 <h3>Code Work</h3>
 
-<div class="img-links">
-<a href="https://abreinke.github.io/drawingmachine/"><img class="below" src="drawing-link.jpg" alt="drawings with text" width="400" height="257"></img><p>Drawing Machine</p></a>
+<div class="row">
+  <div class="column1">
+    <a href="https://abreinke.github.io/soundmachine/" target="_blank">
+      <img src="codelink.jpg" alt="watercolor painting" style="width:100%">
+      <p>Storm Symphony</p>
+    </a>
+  </div>
+  <div class="column1">
+    <a href="https://abreinke.github.io/drawingmachine/" target="_blank">
+      <img src="drawing-machine.jpg" alt="drawing with colors" style="width:100%">
+      <p>Night Insects</p>
+    </a>
+  </div>
 </div>
 
 </body>
