--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <title>Home Page</title>
-<style>
-</style>
 <body>
 
-  <header>Alicia's Artist Website</header>
+<header>Alicia's Artist Website</header>
 
 <div class="container5">
   <div class="desc">For More Information</div>
 <ul>
-  <li><a href="mailto:abreinke@yahoo.com">Email Me</a></li>
-  <li><a href="https://www.instagram.com/abtheavidartist/">Find Me on Instagram</a></li>
-  <li><a href="https://www.linkedin.com/in/alicia-breinke-619b2583/">Find Me on LinkedIn</a></li>
+  <li><a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a></li>
+  <li><a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find Me on Instagram</a></li>
+  <li><a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find Me on LinkedIn</a></li>
 </ul>
 </div>
 
