--- a/design-work.html
+++ b/design-work.html
@@ -4,8 +4,6 @@
 <meta charset="utf-8">
 </head>
 <title>Design Work</title>
-<style>
-</style>
 <body>
 
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
@@ -20,9 +18,9 @@
     <a href="design-work.html">Design Work</a>
     <a href="video-work.html">Video Work</a>
     <h2>For More Information</h2>
-    <a href="mailto:abreinke@yahoo.com">Email Me</a>
-    <a href="https://www.instagram.com/abtheavidartist/">Find me on Instagram.</a>
-    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/">Find me on LinkedIn.</a>
+    <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
     </div>
   </div>
 
