--- a/video-work.html
+++ b/video-work.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html><html lang="en"><head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<script src="p5.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
 <meta charset="utf-8">
 
 </head>
+<title>Video Work</title>
 <body>
+
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+
+  <div id="nav-content" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <h2>My Work</h2>
+    <a href="index.html">Home Page</a>
+    <a href="photo-work.html">Photo Work</a>
+    <a href="code-work.html">Code Work</a>
+    <a href="design-work.html">Design Work</a>
+    <a href="video-work.html">Video Work</a>
+    <h2>For More Information</h2>
+    <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
+    </div>
+  </div>
+
+<h1>Alicia's Artist Website</h1>
+
+<h3>Video Work</h3>
+<div class="container6">
+<div class="row">
+  <div class="column2">
+    <video style="width:100%" controls>
+    <source src="lantern-video.mp4" type="video/mp4">
+    </video>
+    <p>Springtime Composite</p>
+  </div>
+  <div class="column2">
+<video style="width:100%" controls>
+  <source src="documentary.mp4" type="video/mp4">
+  </video>
+  <p>A Place Called Home</p>
+</div>
+<div class="column2">
+  <video style="width:100%" controls>
+    <source src="tutorial.mp4" type="video/mp4">
+  </video>
+  <p>Tutorial: How to Relax</p>
+</div>
+</div>
+</div>
 
 </body>
 </html>
