--- a/design-work.html
+++ b/design-work.html
@@ -6,122 +6,134 @@
 <title>Design Work</title>
 <body>
 
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
-
-  <div id="nav-content" class="overlay">
+  <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div class="overlay-content">
-      <h2>My Work</h2>
     <a href="index.html">Home Page</a>
     <a href="photo-work.html">Photo Work</a>
-    <a href="code-work.html">Code Work</a>
     <a href="design-work.html">Design Work</a>
+    <a href="code-work.html">Code Work</a>
     <a href="video-work.html">Video Work</a>
-    <h2>For More Information</h2>
-    <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
-    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
-    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
-    </div>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">My LinkedIn Page</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">My Artist's Instagram Page</a>
+    <a href="contact.html">Contact Me</a>
   </div>
 
-  <h1>Alicia's Artist Website</h1>
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+  </div>
+
+<h1>Alicia's Artist Website</h1>
 
 <h3>Design Work</h3>
 
-<div class="container1">
-
-<h5>Personal Work</h5>
-
-<div class="expandable-img">
+<div class="design">
   <a href="waves.jpg" target="_blank">
-    <img src="waves.jpg" alt="bird in front of red background" style="width:100%">
+    <img src="waves.jpg" alt="bird in front of red background">
+    <div class="desc">
+      <p>Waves</p>
   </a>
-  <div class="desc"><i>Waves</i></div>
+</div>
 </div>
 
- <div class="expandable-img">
+ <div class="design">
    <a href="flight.jpg" target="_blank">
-     <img src="flight.jpg" alt="paper cranes" style="width:100%">
+     <img src="flight.jpg" alt="paper cranes">
+     <div class="desc">
+      <p>Flight</p>
    </a>
-   <div class="desc"><i>Flight</i></div>
  </div>
+</div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="sunburst.jpg" target="_blank">
-    <img src="sunburst.jpg" alt="sunflower" style="width:100%">
+    <img src="sunburst.jpg" alt="sunflower">
+  <div class="desc">
+    <p>Sunburst</p>
   </a>
-  <div class="desc"><i>Sunburst</i></div>
+</div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="flower-vortex.jpg" target="_blank">
-    <img src="flower-vortex.jpg" alt="abstracted flower" style="width:100%">
+    <img src="flower-vortex.jpg" alt="abstracted flower">
+  <div class="desc">
+    <p>Flower Vortex</p>
   </a>
-  <div class="desc"><i>Flower Vortex</i></div>
+</div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="buzz.jpg" target="_blank">
-    <img src="buzz.jpg" alt="bee and tree" style="width:100%">
+    <img src="buzz.jpg" alt="bee and tree">
+  <div class="desc">
+    <p>Buzz</p>
   </a>
-  <div class="desc"><i>Buzz</i></div>
+</div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="tahoe.jpg" target="_blank">
-    <img src="tahoe.jpg" alt="sunglasses" style="width:100%">
+    <img src="tahoe.jpg" alt="sunglasses">
   </a>
-  <div class="desc"><i>Tahoe</i></div>
+  <div class="desc">
+    <p>Tahoe</p>
+  </a>
+</div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="type-collage.jpg" target="_blank">
-    <img src="type-collage.jpg" alt="fern and text" style="width:100%">
-  </a>
-  <div class="desc"><i>Serenity</i></div>
+    <img src="type-collage.jpg" alt="fern and text">
+  <div class="desc">
+    <p>Serenity</p>
+</a>
+  </div>
 </div>
 
-</div>
-
-<div class="container2">
-
-<h5>Event Concepts</h5>
-
-<div class="expandable-img">
+<div class="design">
   <a href="cadreflyer1.jpg" target="_blank">
-    <img src="cadreflyer1.jpg" alt="flyer" style="width:100%">
+    <img src="cadreflyer1.jpg" alt="flyer">
+  <div class="desc">
+    <p>CADRE: First Meeting Flyer</p>
   </a>
-  <div class="desc"><i>First Meeting Flyer</i></div>
+  </div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="eventconcept1.jpg" target="_blank">
-    <img src="eventconcept1.jpg" alt="black and white window" style="width:100%">
+    <img src="eventconcept1.jpg" alt="black and white window">
+  <div class="desc">
+    <p>CADRE: Event Concept 1</p>
   </a>
-  <div class="desc"><i>Halloween Event Idea #1</i></div>
+</div>
 </div>
 
-<div class="expandable-img">
+<div class="design">
   <a href="eventconcept2.jpg" target="_blank">
-    <img src="eventconcept2.jpg" alt="window, tree, and moon" style="width:100%">
-  </a>
-  <div class="desc"><i>Halloween Event Idea #2</i></div>
-</div>
-
-<div class="expandable-img">
-  <a href="eventconcept3.jpg" target="_blank">
-    <img src="eventconcept3.jpg" alt="tree and moon" style="width:100%">
-  </a>
-  <div class="desc"><i>Halloween Event Idea #3</i></div>
-</div>
-
-  <div class="expandable-img">
-    <a href="eventconcept4.jpg" target="_blank">
-      <img src="eventconcept4.jpg" alt="staircase" style="width:100%">
+    <img src="eventconcept2.jpg" alt="window, tree, and moon">
+    <div class="desc">
+      <p>CADRE: Event Concept 2</p>
     </a>
-    <div class="desc"><i>Halloween Event Idea #4</i></div>
+  </div>
+</div>
+
+<div class="design">
+  <a href="eventconcept3.jpg" target="_blank">
+    <img src="eventconcept3.jpg" alt="tree and moon">
+  <div class="desc">
+    <p>CADRE: Event Concept 3</p>
+  </a>
+  </div>
+</div>
+
+  <div class="design">
+    <a href="eventconcept4.jpg" target="_blank">
+      <img src="eventconcept4.jpg" alt="staircase">
+    <div class="desc">
+      <p>CADRE: Event Concept 4</p>
+    </a>
+    </div>
   </div>
 
-</div>
 </body>
 </html>
