--- a/photo-work.html
+++ b/photo-work.html
@@ -7,118 +7,123 @@
     <title>Photo Work</title>
 <body>
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
-
-<div id="nav-content" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="overlay-content">
-    <h2>My Work</h2>
-  <a href="index.html">Home Page</a>
-  <a href="photo-work.html">Photo Work</a>
-  <a href="code-work.html">Code Work</a>
-  <a href="design-work.html">Design Work</a>
-  <a href="video-work.html">Video Work</a>
-  <h2>For More Information</h2>
-  <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
-  <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
-  <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">Home Page</a>
+    <a href="photo-work.html">Photo Work</a>
+    <a href="design-work.html">Design Work</a>
+    <a href="code-work.html">Code Work</a>
+    <a href="video-work.html">Video Work</a>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">My LinkedIn Page</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">My Artist's Instagram Page</a>
+    <a href="contact.html">Contact Me</a>
   </div>
-</div>
+
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+  </div>
 
 <h1>Alicia's Artist Website</h1>
 
 <h3>Photo Work</h3>
 
-<div class="photo-gallery">
-  <a href="plant.jpg" target="_blank">
-    <img src="plant.jpg" alt="dandelion" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="insect.jpg">
+    <img src="insect.jpg" alt="yellow insect">
+    <div class="desc">
+      <p>Microscopic Beauty</p>
   </a>
-  <div class="desc"><i>Wish</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="trainbridge.jpg" target="_blank">
-    <img src="trainbridge.jpg" alt="bridge over river" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="trainbridge.jpg">
+    <img src="trainbridge.jpg" alt="bridge over foggy river">
+    <div class="desc">
+      <p>Crossings</p>
   </a>
-  <div class="desc"><i>Crossings</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="bird.jpg" target="_blank">
-    <img src="bird.jpg" alt="bird in tree" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="rose1.jpg">
+    <img src="rose1.jpg" alt="red rose">
+    <div class="desc">
+    <p>Scarlet Splash</p>
   </a>
-  <div class="desc"><i>Bird's View</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="insect.jpg" target="_blank">
-    <img src="insect.jpg" alt="yellow and black insect" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="diridon.jpg">
+    <img src="diridon.jpg" alt="train tracks">
+    <div class="desc">
+      <p>Anticipation</p>
   </a>
-  <div class="desc"><i>Microscopic Beauty</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="rose1.jpg" target="_blank">
-    <img src="rose1.jpg" alt="red rose" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="dandelion.jpg">
+    <img src="dandelion.jpg" alt="dandelion">
+    <div class="desc">
+      <p>Wish</p>
   </a>
-  <div class="desc"><i>Splash of Red</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="stop.jpg" target="_blank">
-    <img src="stop.jpg" alt="stop light" style="width:100%">
-  </a>
-  <div class="desc"><i>Stop</i></div>
+<div class="photo">
+  <a target="_blank" href="bee1.jpg">
+    <img src="bee1.jpg" alt="bee on flower">
+    <div class="desc">
+      <p>Flower Dance: Part 1</p>
+    </a>
+  </div>
 </div>
 
-<div class="photo-gallery">
-  <a href="mirror.jpg" target="_blank">
-    <img src="mirror.jpg" alt="car mirror" style="width:100%">
-  </a>
-  <div class="desc"><i>Blurred Reflections</i></div>
+<div class="photo">
+  <a target="_blank" href="bee2.jpg">
+    <img src="bee2.jpg" alt="bee on flower">
+    <div class="desc">
+      <p>Flower Dance: Part 2</p>
+    </a>
+  </div>
 </div>
 
-<div class="photo-gallery">
-  <a href="splash.jpg" target="_blank">
-    <img src="splash.jpg" alt="dog running on beach" style="width:100%">
-  </a>
-  <div class="desc"><i>Splash</i></div>
+<div class="photo">
+  <a target="_blank" href="bee3.jpg">
+    <img src="bee3.jpg" alt="bee on flower">
+    <div class="desc">
+      <p>Flower Dance: Part 3</p>
+    </a>
+  </div>
 </div>
 
-<div class="photo-gallery">
-  <a href="whiteflower1.jpg" target="_blank">
-    <img src="whiteflower1.jpg" alt="white wildflower" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="whiteflower1.jpg">
+    <img src="whiteflower1.jpg" alt="white flower">
+    <div class="desc">
+      <p>Contrasting Beauty</p>
   </a>
-  <div class="desc"><i>Growing Wild</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="whiteflower2.jpg" target="_blank">
-    <img src="whiteflower2.jpg" alt="white flower" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="cityhall.jpg">
+    <img src="cityhall.jpg" alt="San Jose City Hall">
+    <div class="desc">
+      <p>San Jose City Hall</p>
   </a>
-  <div class="desc"><i>Star Flower</i></div>
+</div>
 </div>
 
-<div class="photo-gallery">
-  <a href="towerbridge.jpg" target="_blank">
-    <img src="towerbridge.jpg" alt="yellow bridge over river" style="width:100%">
+<div class="photo">
+  <a target="_blank" href="towerbridge.jpg">
+    <img src="towerbridge.jpg" alt="Tower Bridge">
+    <div class="desc">
+    <p>Golden Sunset</p>
   </a>
-  <div class="desc"><i>Sacramento Sunset</i></div>
 </div>
-
-
-<div class="photo-gallery">
-  <a href="cityhall.jpg" target="_blank">
-    <img src="cityhall.jpg" alt="stairway" style="width:100%">
-  </a>
-  <div class="desc"><i>Evening Views</i></div>
-</div>
-
-<div class="photo-gallery">
-  <a href="diridon.jpg" target="_blank">
-    <img src="diridon.jpg" alt="image of tracks" style="width:100%">
-  </a>
-  <div class="desc"><i>Homebound from San Jose</i></div>
 </div>
 
 </body>
