--- a/video-work.html
+++ b/video-work.html
@@ -7,22 +7,20 @@
 <title>Video Work</title>
 <body>
 
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
-
-  <div id="nav-content" class="overlay">
+  <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div class="overlay-content">
-      <h2>My Work</h2>
     <a href="index.html">Home Page</a>
     <a href="photo-work.html">Photo Work</a>
-    <a href="code-work.html">Code Work</a>
     <a href="design-work.html">Design Work</a>
+    <a href="code-work.html">Code Work</a>
     <a href="video-work.html">Video Work</a>
-    <h2>For More Information</h2>
-    <a href="mailto:abreinke@yahoo.com" target="_blank">Email Me</a>
-    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">Find me on Instagram.</a>
-    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">Find me on LinkedIn.</a>
-    </div>
+    <a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">My LinkedIn Page</a>
+    <a href="https://www.instagram.com/abtheavidartist/" target="_blank">My Artist's Instagram Page</a>
+    <a href="contact.html">Contact Me</a>
+  </div>
+
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
   </div>
 
 <h1>Alicia's Artist Website</h1>
