--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ a:hover {
 <body>
 
 <div class="header">
-  <div class="desc">Alicia's Art Website</div>
+  <div class="desc">Alicia's Artist Website</div>
 </div>
 
 <div class="container">
