--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
   </div>
 
+<h1>Alicia's Artist Website</h1>
+
   <h3>Contact Me</h3>
 
 <div class="contact-container">
