css index changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ div.desc {
   font-style: normal;
   font-weight: normal;
   font-family: sans-serif;
-  font-size: 25px;
+  font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -69,14 +69,10 @@ div.desc {
   text-align: center;
 }
 
-.text a {
-  text-decoration: none;
-  color: white;
-}
-
 div.info-container {
   float: left;
   position: relative;
+  margin: 10px;
   width: 84%;
   height: auto;
   margin: 10px;
@@ -84,38 +80,35 @@ div.info-container {
 }
 
 h3 {
+  color: white;
   font-style: normal;
   font-weight: normal;
   font-family: sans-serif;
-  font-variant-caps: normal;
   font-size: 25px;
-  color: white;
   text-align: left;
   margin: 20px;
 }
 
-ul {
-  list-style-type: none;
-}
-
 a {
-  font-style: normal;
-  font-weight: normal;
-  font-family: sans-serif;
-  font-size: 20px;
   color: white;
   text-align: left;
   text-decoration: none;
-  margin-left: 20px;
-  margin-right: 0;
-  margin-top: 20px;
-  margin-bottom: 10px;
 }
 
 a:hover {
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-color: white;
+}
+
+ul {
+  list-style-type: none;
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: white;
 }
 
 </style>
@@ -156,7 +149,7 @@ a:hover {
 </div>
 
 <div class="info-container">
-  <h3>For more information, feel free to visit the following pages.</h3>
+<h3>For more information, feel free to visit the following pages.</h3>
   <ul>
     <li><a href="https://www.linkedin.com/in/alicia-breinke-619b2583/" target="_blank">My LinkedIn Page</a></li>
     <li><a href="https://www.instagram.com/abtheavidartist/" target="_blank">My Artist's Instagram Page</a></li>
