--- a/code-work.html
+++ b/code-work.html
@@ -20,7 +20,7 @@
   </div>
 
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Open Navigation Menu</span>
 
 <h1>Alicia's Artist Website</h1>
 
