--- a/design-work.html
+++ b/design-work.html
@@ -19,7 +19,7 @@
   </div>
 
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Open Navigation Menu</span>
   </div>
 
 <h1>Alicia's Artist Website</h1>
