--- a/video-work.html
+++ b/video-work.html
@@ -20,7 +20,7 @@
   </div>
 
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Open Navigation Menu</span>
   </div>
 
 <h1>Alicia's Artist Website</h1>
@@ -32,20 +32,19 @@
     <video style="width:100%" controls>
     <source src="lantern-video.mp4" type="video/mp4">
     </video>
-    <p>Springtime Composite</p>
+    <p><i>Springtime Composite</i></p>
   </div>
   <div class="column2">
 <video style="width:100%" controls>
   <source src="documentary.mp4" type="video/mp4">
   </video>
-  <p>A Place Called Home</p>
+  <p><i>A Place Called Home</i></p>
 </div>
 <div class="column2">
   <video style="width:100%" controls>
     <source src="tutorial.mp4" type="video/mp4">
   </video>
-  <p>Tutorial: How to Relax</p>
-</div>
+  <p><i>Tutorial: How to Relax</i></p>
 </div>
 </div>
 
