--- a/ar-vr-work.html
+++ b/ar-vr-work.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 
 </head>
-<title>Code Work</title>
+<title>AR & VR Work</title>
 <body>
 
   <div id="mySidenav" class="sidenav">
@@ -24,24 +24,7 @@
 
 <h1>Alicia's Artist Website</h1>
 
-<h3>Code Work</h3>
-
-<div class="row">
-  <div class="column1">
-    <a href="https://abreinke.github.io/soundmachine/" target="_blank">
-      <img src="codelink.jpg" alt="watercolor painting" style="width:100%">
-      <p>Storm Symphony</p>
-    </a>
-  </div>
-  <div class="column1">
-    <a href="https://abreinke.github.io/drawingmachine/" target="_blank">
-      <img src="drawing-machine.jpg" alt="drawing with colors" style="width:100%">
-      <p>Night Insects</p>
-    </a>
-  </div>
-</div>
-
-<a href="project1.obj">Project 1</a>
+<h3>AR & VR Work</h3>
 
 </body>
 </html>
