--- a/photo-work.html
+++ b/photo-work.html
@@ -27,104 +27,184 @@
 
 <h3>Photo Work</h3>
 
-<div class="photo">
-  <a target="_blank" href="insect.jpg">
-    <img src="insect.jpg" alt="yellow insect">
-    <div class="desc">
-      <p>Microscopic Beauty</p>
-  </a>
+<div class="row">
+  <div class="column">
+    <img src="insect.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
-</div>
-
-<div class="photo">
-  <a target="_blank" href="trainbridge.jpg">
-    <img src="trainbridge.jpg" alt="bridge over foggy river">
-    <div class="desc">
-      <p>Crossings</p>
-  </a>
-</div>
-</div>
-
-<div class="photo">
-  <a target="_blank" href="rose1.jpg">
-    <img src="rose1.jpg" alt="red rose">
-    <div class="desc">
-    <p>Scarlet Splash</p>
-  </a>
-</div>
-</div>
-
-<div class="photo">
-  <a target="_blank" href="diridon.jpg">
-    <img src="diridon.jpg" alt="train tracks">
-    <div class="desc">
-      <p>Anticipation</p>
-  </a>
-</div>
-</div>
-
-<div class="photo">
-  <a target="_blank" href="dandelion.jpg">
-    <img src="dandelion.jpg" alt="dandelion">
-    <div class="desc">
-      <p>Wish</p>
-  </a>
-</div>
-</div>
-
-<div class="photo">
-  <a target="_blank" href="bee1.jpg">
-    <img src="bee1.jpg" alt="bee on flower">
-    <div class="desc">
-      <p>Flower Dance: Part 1</p>
-    </a>
+<div class="column">
+    <img src="trainbridge.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
+<div class="column">
+    <img src="rose1.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="diridon.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="dandelion.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="bee1.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="bee2.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="bee3.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="whiteflower1.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="cityhall.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="towerbridge.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+</div>
 </div>
 
-<div class="photo">
-  <a target="_blank" href="bee2.jpg">
-    <img src="bee2.jpg" alt="bee on flower">
-    <div class="desc">
-      <p>Flower Dance: Part 2</p>
-    </a>
+<div id="myModal" class="modal">
+  <span class="close cursor" onclick="closeModal()">&times;</span>
+  <div class="modal-content">
+
+    <div class="mySlides">
+      <div class="numbertext">1 / 11</div>
+      <img src="insect.jpg" style="width:100%">
+    </div>
+
+  <div class="mySlides">
+    <div class="numbertext">2 / 11</div>
+    <img src="trainbridge.jpg" style="width:100%">
   </div>
-</div>
 
-<div class="photo">
-  <a target="_blank" href="bee3.jpg">
-    <img src="bee3.jpg" alt="bee on flower">
-    <div class="desc">
-      <p>Flower Dance: Part 3</p>
-    </a>
+  <div class="mySlides">
+    <div class="numbertext">3 / 11</div>
+    <img src="rose1.jpg" style="width:100%">
   </div>
+
+  <div class="mySlides">
+    <div class="numbertext">4 / 11</div>
+    <img src="diridon.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">5 / 11</div>
+    <img src="dandelion.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">6 / 11</div>
+    <img src="bee1.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">7 / 11</div>
+    <img src="bee2.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">8 / 11</div>
+    <img src="bee3.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">9 / 11</div>
+    <img src="whiteflower1.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">10 / 11</div>
+    <img src="cityhall.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">11 / 11</div>
+    <img src="towerbridge.jpg" style="width:100%">
+  </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+         <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+  <div class="caption-container">
+        <p id="caption"></p>
+      </div>
+
+<div class="column">
+  <img class="demo cursor" src="insect.jpg" style="width:100%" onclick="currentSlide(1)" alt="Microscopic Beauty">
+</div>
+<div class="column">
+  <img class="demo cursor" src="trainbridge.jpg" style="width:100%" onclick="currentSlide(2)" alt="Crossings">
+</div>
+<div class="column">
+  <img class="demo cursor" src="rose1.jpg" style="width:100%" onclick="currentSlide(3)" alt="Scarlet Splash">
+</div>
+<div class="column">
+  <img class="demo cursor" src="diridon.jpg" style="width:100%" onclick="currentSlide(4)" alt="Home Bound">
+</div>
+<div class="column">
+  <img class="demo cursor" src="dandelion.jpg" style="width:100%" onclick="currentSlide(5)" alt="Wish">
+</div>
+<div class="column">
+  <img class="demo cursor" src="bee1.jpg" style="width:100%" onclick="currentSlide(6)" alt="Flower Dance: Part 1">
+</div>
+<div class="column">
+  <img class="demo cursor" src="bee2.jpg" style="width:100%" onclick="currentSlide(7)" alt="Flower Dance: Part 2">
+</div>
+<div class="column">
+  <img class="demo cursor" src="bee3.jpg" style="width:100%" onclick="currentSlide(8)" alt="Flower Dance: Part 3">
+</div>
+<div class="column">
+  <img class="demo cursor" src="whiteflower1.jpg" style="width:100%" onclick="currentSlide(9)" alt="Star Flower">
+</div>
+<div class="column">
+  <img class="demo cursor" src="cityhall.jpg" style="width:100%" onclick="currentSlide(10)" alt="Perspectives of San Jose City Hall">
+</div>
+<div class="column">
+  <img class="demo cursor" src="towerbridge.jpg" style="width:100%" onclick="currentSlide(11)" alt="Sacramento Sunset">
+</div>
+</div>
 </div>
 
-<div class="photo">
-  <a target="_blank" href="whiteflower1.jpg">
-    <img src="whiteflower1.jpg" alt="white flower">
-    <div class="desc">
-      <p>Contrasting Beauty</p>
-  </a>
-</div>
-</div>
+<script>
 
-<div class="photo">
-  <a target="_blank" href="cityhall.jpg">
-    <img src="cityhall.jpg" alt="San Jose City Hall">
-    <div class="desc">
-      <p>San Jose City Hall</p>
-  </a>
-</div>
-</div>
+function openModal() {
+  document.getElementById("myModal").style.display = "block";
+}
 
-<div class="photo">
-  <a target="_blank" href="towerbridge.jpg">
-    <img src="towerbridge.jpg" alt="Tower Bridge">
-    <div class="desc">
-    <p>Golden Sunset</p>
-  </a>
-</div>
-</div>
+function closeModal() {
+  document.getElementById("myModal").style.display = "none";
+}
+
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  var captionText = document.getElementById("caption");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+  captionText.innerHTML = dots[slideIndex-1].alt;
+}
+
+</script>
 
 </body>
 </html>
